[package]
name = "ssh"
version = "0.1.0"
authors = ["ShawHrown <shawhrown@163.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
libc="0.2"
log="*"
bitflags="1.2.1"
libz-sys = {version = "*", features = ["static","zlib-ng"]}

[lib]
name = "ssh"
path = "src/lib.rs"

[build-dependencies]
pkg-config = "0.3.11"
cmake = "0.1"

[target."cfg(unix)".dependencies]
openssl-sys = {version = "*" , features = ["vendored"]}